Attempt to fix sentence

--- a/content/70.sustainability.md
+++ b/content/70.sustainability.md
@@ -49,7 +49,8 @@ While we have not been able to verify this, examining the cadence of bug fix rel
 
 Maintenance and bug fixes are critical to developing yt as a community-focused code.
 The damage that can be done by ignoring a bug report, dismissing a suggestion, or outright rejecting proposed fixes is real, and can have measurable impact on community cohesion and growth.
-As such, in the yt development process we strive to be as accommodating and welcoming as possible, while still balancing that against the very real costs that responding to bug fixes, feature requests, and providing helpful insight with issues that may be covered by the documentation or that are known bugs.
+As such, in the yt development process we strive to be as accommodating and welcoming as possible.
+This requires balancing being welcoming and patient against the very real costs that come with responding to bug fixes and feature requests; often this means providing helpful insight that may already be covered by the documentation, or that may reflect known bugs.
 This is a challenge, and one that benefits from having dedicated maintainers, or at least dedicated maintenance time from the developer community.
 Furthermore, we have found that regular, collaborative co-working sessions can ease this burden, although they occasionally veer into too light of code review or constant reiteration of "standing" issues.
 
