--- a/content/45.user_friendliness.md
+++ b/content/45.user_friendliness.md
@@ -1,7 +1,14 @@
 ## User-Friendliness
 
+Several different entrypoints exist for research codes.
+For instance, an ontology of "end-users" in science has developed that emphasizes that typically "library" codes are only used implicitly by researchers.
+In this framing, library codes primarily interface with application codes, rather than with researchers.
+We have taken a slightly different approach with the design and development of yt, as it exists in a middle-ground as a library used *as an application* within the scripting language python and also as a library for more complex analysis of data.
+
+
+
 ### Publication-Ready Figures
 
 ### Jupyter Integration
 
-
+### Enhanced Error Messages
