--- a/content/35.viz_and_volrendering.md
+++ b/content/35.viz_and_volrendering.md
@@ -5,7 +5,7 @@ Making this distinction is important, because it underscores the relationship be
 
 **CC: discuss ray traversal for patch-based datasets + oct-based datasets.**
 
-### Pixelizing Variable-Mesh Objects
+### Pixelizing Variable-Mesh Objects {#sec:pixelization}
 
 The results of either projecting or slicing through a logically-cartesian finite volume dataset is represented in `yt` as a collection of pixel positions and widths.
 These objects, hereafter referred to as exposing the "variable mesh" interface (as originated in HippoDraw), are not typically suitable for direct visualization.
