expand plotting stuff

--- a/content/45.user_friendliness.md
+++ b/content/45.user_friendliness.md
@@ -21,8 +21,45 @@ Phase plots utilize the `pcolormesh` operation.
 
 All of these internal plots utilize matplotlib's "object-oriented" interface, wherein `Figure` and `Axes` objects are created directly.
 yt then manages the internal state of these objects, and provides high-level access to operations that are aware of the nature of the visualizations; for instance, operations that zoom and pan, and that are unit-aware.
+In the case of 2D spatial images, these are all generated as subclasses of a `PlotWindow` object, named such because it functions as a "window" onto the data, including automatically generating and managing multiple fields simultaneously.
 
-more here
+Within the `PlotWindow` object, we set up two levels of data invalidation; when a characteristic of the data is changed (i.e., the viewing window, the resolution) then the *data* is said to be invalidated.
+When a characteristic of the visualization is changed (the label, the scaling of the colorbar, the colormap) then the *plot* is said to be invalidated.
+This allows yt to minimize the overhead of conducting potentially expensive operations on the underlying data, while maximizing its utilization of matplotlib for generation of images.
+The image buffers generated are also always available through the API, so in the not-uncommon case that researchers wish to take the genrated images and perform detailed manipulations or plot layouts, they are able to do so, using the matplotlib API they may already be familiar with.
+
+In addition to providing data-aware operations for plot organization, a number of plot modifications are available that provide data-aware annotations.
+As the plot window moves, the data-aware annotations are updated and move with the window.
+For example, the process of generating vector overlays from variable-resolution data requires the same set of operations as generating a fixed resolution image buffer, so yt provides a method for overplotting vector fields.
+This also requires correctly applying axis-ordering, so yt will automatically determine the appropriate x and y vectors in the image plane, and for an off-axis slice, it will generate in-plane vector fields by computing the appropriate set of dot products.
+Additional data-aware operations include overplotting locations of gravitationally-bound clumps, contour plots of variable-resolution data, boundaries of data structures (such as grids in patch-based grid datasets, cells from patch and octree datasets, particle locations), streamlines, line integral convolution, and coordinate-aware annotations.
+
+All of these figure construction and modification methods apply to cartesian ($x$, $y$, $z$) datasets, but yt also supports them for curvilinear data such as that organized spherically ($r$, $\theta$, $\phi$) and cylindrically ($r$, $z$, $\theta$).
+
+By focusing on the utilizing low-level yt operations to facilitate high-level interactions, we can embed best practices for accessibility and visualizations at as many levels as possible.
+For instance, yt provides suggested colormaps for specific fields, will apply heuristics to determine the appropriate scaling (such as symmetric logarithm) and utilize the appropriate labels and units to the data.
+This allows users of yt to access both the expansive functionality of matplotlib as well as the more domain-specific tasks available in yt.
+
+Finally, the `cmyt` package ('colormaps from yt') also provides several colormaps that were, until yt 4.0, included in the main yt distribution.
+Many of these are developed by yt contributors, typically using the [`viscm`](https://github.com/matplotlib/viscm) package, and are designed to be perceptually uniform in colorspace.
+
+| Colormap Name | Colormap                              |
+| ------------- | ------------------------------------- |
+| `algae`       | ![](images/colormaps/algae.png)       |
+| `arbre`       | ![](images/colormaps/arbre.png)       |
+| `dusk`        | ![](images/colormaps/dusk.png)        |
+| `kelp`        | ![](images/colormaps/kelp.png)        |
+| `octarine`    | ![](images/colormaps/octarine.png)    |
+| `pastel`      | ![](images/colormaps/pastel.png)      |
+| `pixel_blue`  | ![](images/colormaps/pixel_blue.png)  |
+| `pixel_green` | ![](images/colormaps/pixel_green.png) |
+| `pixel_red`   | ![](images/colormaps/pixel_red.png)   |
+| `xray`        | ![](images/colormaps/xray.png)        |
+
+Table: Colormaps provided by `cmyt`. {#tbl:colormaps}
+
+We note in particular that in previous versions of yt, `algae` was known as `bds_highcontrast` (and was our default colormap) and that the `arbre` colormap is the current default colormap.
+`pastel` was designed by Tune Kamae, and was previously referred to as `kamae`.
 
 ### Enhanced Error Messages
 
