try to clear up image and plot data

--- a/content/45.user_friendliness.md
+++ b/content/45.user_friendliness.md
@@ -23,9 +23,9 @@ All of these internal plots utilize Matplotlib's "object-oriented" interface, wh
 yt then manages the internal state of these objects, and provides high-level access to operations that are aware of the nature of the visualizations; for instance, operations that zoom and pan, and that are unit-aware.
 In the case of 2D spatial images, these are all generated as subclasses of a `PlotWindow` object, named such because it functions as a "window" onto the data, including automatically generating and managing multiple fields simultaneously.
 
-Within the `PlotWindow` object, we set up two levels of data invalidation; when a characteristic of the data is changed (i.e., the viewing window, the resolution) then the *data* is said to be invalidated.
+Within the `PlotWindow` object, we set up two levels of visualization invalidation; when a characteristic of the image buffer data is changed (i.e., the viewing window, the resolution) then the *image data* is said to be invalidated.
 When a characteristic of the visualization is changed (the label, the scaling of the colorbar, the colormap) then the *plot* is said to be invalidated.
-This allows yt to minimize the overhead of conducting potentially expensive operations on the underlying data, while maximizing its utilization of Matplotlib for generation of images.
+This allows yt to minimize the overhead of conducting potentially expensive operations on the underlying (unprocessed) data, while maximizing its utilization of Matplotlib for generation of images.
 The image buffers generated are also always available through the API, so in the common case that researchers wish to take the genrated images and perform detailed manipulations or plot layouts, they are able to do so, using the Matplotlib API they may already be familiar with.
 
 In addition to providing data-aware operations for plot organization, a number of plot modifications are available that provide data-aware annotations.
