use better name

--- a/content/45.user_friendliness.md
+++ b/content/45.user_friendliness.md
@@ -63,7 +63,7 @@ We note in particular that in previous versions of yt, `algae` was known as `bds
 
 ### Enhanced Error Messages
 
-Providing helpful error messages is almost an art form; projects like AstroPy @2022ApJ...935..167A have developed complex, helpful and thoughtfully-designed methods of providing as much usable information as possible when something "goes wrong."
+Providing helpful error messages is almost an art form; projects like AstroPy @astropy5 have developed complex, helpful and thoughtfully-designed methods of providing as much usable information as possible when something "goes wrong."
 In recent development history, we have spent a considerable amount of effort attempting to discern between errors that are "user-facing" and those that are strictly "internal."
 "Internal" errors, for the most part, are often highly-unexpected; they may result from malformed data, or data that yt (and the developers) do not know to expect, or from general software defects.
 "User-facing" errors are those that can be anticipated, and they are the errors for which we endeavor to provide helpful and extensive responses.
