--- a/content/55.scaling_parallelism.md
+++ b/content/55.scaling_parallelism.md
@@ -1,7 +1,29 @@
 ## Scaling and Parallelism 
 
+To support cases where data volume results in long processing time or large memory requirements, yt operations have been parallelized using the Message Passing Interface (MPI; @mpi40).
+When designing the parallel interface for yt, as discussed in [@doi:10.1088/0067-0049/192/1/9], the design goals included ensuring that scripts required little to no adjustments to be run in parallel.
+In the intervening time, the parallel operation infrastructure has been rewritten in several key ways to enable individuals to apply multi-level parallelism to their analysis operations.
+
+### Structure of Parallel Operations
+
+Almost all of the operations in yt that are conducted in parallel follow a straightforward method of decomposing work and consolidating results:
+
+ 1. Identify which chunking method (see @sec:chunking) is most appropriate for the operation.
+ 2. Consolidate chunks according to IO minimization and assign to individual MPI tasks
+ 3. Join (potentially applying reduction operations) final results to provide solution to *all tasks* in the group
+
+The final step, of joining across tasks, results in the final set of values being accessible to all tasks; this is not a universal "final step" in parallel operations, and in some cases results in substantial duplication of memory.
+This compromise was accepted as a result of the design goals of ensuring that scripts can run unmodified.
+
+The parallelism in yt heavily leans upon the "index" for a dataset either being available *already* at initiation time on all tasks, or that index being *accessible* through IO operations or fast generation.
+This provides a degree of load-balancing that can be conducted, as estimates of memory and processing requirements are available on all tasks (and thus the load-balancing calculations are deterministic across all tasks).
+In essence, this means that for grid-based datasets, the entire grid hierarchy is available on all processors; for octrees or particle datasets, it means that at least a rough estimate of the distribution of values must be available (and identical) on all processors.
+This doesn't prevent opaquely distributed datasets from being decomposed, but it does allow datasets whose distribution is well-described to be decomposed with greater precision.
+
+### Multi-Level Parallelism
+
 ### Performance of Operations
 
-### Inline Analysis
 
-### Simple Parallelism
+
+### Inline Analysis
