--- a/content/55.scaling_parallelism.md
+++ b/content/55.scaling_parallelism.md
@@ -20,7 +20,17 @@ This provides a degree of load-balancing that can be conducted, as estimates of 
 In essence, this means that for grid-based datasets, the entire grid hierarchy is available on all processors; for octrees or particle datasets, it means that at least a rough estimate of the distribution of values must be available (and identical) on all processors.
 This doesn't prevent opaquely distributed datasets from being decomposed, but it does allow datasets whose distribution is well-described to be decomposed with greater precision.
 
+
 ### Multi-Level Parallelism
+
+In its original implementation of parallelism, yt utilized a single, global MPI communicator (`MPI_COMM_WORLD`).
+This had the advantage of (counter-intuitively) not requiring a global state be tracked; however, it also greatly limited the degree to which tasks could be distributed.
+Current versions of yt now implement a stack-based approach to MPI communicators, where subsets of MPI tasks are assigned to different collective operations.
+
+For example, when conducting halo finding and analysis (see @sec:halo_finding) yt can parallelize in groups of MPI tasks *across* halos, and then decompose the work *within* a given halo across MPI tasks inside that communicator.
+This takes place by specifying a task size at the top level (or allowing yt's internal heuristics to determine it) and then distributing work to sub-communicators, each of which is then used for decomposition inside that top-level task.
+
+### Parallelism Interfaces
 
 ### Performance of Operations
 
