--- a/content/manual-references.bib
+++ b/content/manual-references.bib
@@ -31,3 +31,10 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@manual{mpi40,
+    author = "{Message Passing Interface Forum}",
+    title  = "{MPI}: A Message-Passing Interface Standard Version 4.0",
+    url    = "https://www.mpi-forum.org/docs/mpi-4.0/mpi40-report.pdf",
+    year   = 2021,
+    month  = jun
+}
