--- a/content/55.scaling_parallelism.md
+++ b/content/55.scaling_parallelism.md
@@ -32,6 +32,40 @@ This takes place by specifying a task size at the top level (or allowing yt's in
 
 ### Parallelism Interfaces
 
+yt presents interfaces for implicit parallelism, wherein internal parallelism constructs are utilized by yt operations, as well as explicit operations that are conducted in parallel.
+The former is woven throughout the fabric of all derived quantities, multi-dimensional profiling, and projection operations.
+This parallelism is instrumented through the use of the yt "chunking" interface, and all derived quantities implement a fixed set of initialization, calculation, reduction and finalization operations.
+The high-level interface to the `DerivedQuantity` subclasses computes the data chunks in the source data object and then assigns these to individual MPI tasks in the current top-level communicator.
+Each initializes storage space for the intermediate values, iterates over its assigned chunks and constructs intermediate reductions, and then the finalization step involves broadcasting the values to all other tasks and completing the final set of operations.
+For projections, the procedure is very similar; those datasets with an index duplicated across MPI tasks (such as patch-based grid datasets) are collapsed along a dimension and each MPI task fills in the values, which are then reduced through a broadcast operation.
+Utilizing these operations requires *no* modifications to user-facing code other than a call to `yt.enable_parallelism()` at the start of the script.
+
+The user-facing parallel constructs allow for somewhat greater flexibility in defining parallel task decomposition.
+Many objects in yt, particularly those such as the `DatasetSeries` object, have constituent data objects on which analysis can be conducted.
+These often provide a `piter` method, for "parallel iteration."
+This provides a shorthand method of applying the `parallel_objects` interface, described below, and allows for dynamic task allocation, per-item storage and specifying the number of processors in the communicator assigned to each object.
+
+Finally, yt also provides a top-level `parallel_objects` command.
+This accepts an iterable object (which typically must be able to provide length, so unknown-length generators are not suitable) and a desired sub-task size.
+yt will group these objects into sub-communicators of the specified size, defaulting to a single MPI task per object.
+Additionally, yt can provide a storage object to each individual sub-communicator, if that storage object is provided to the `parallel_objects` function call.
+Each sub-communicator can then set a key and a value, and all tasks will receive the union of these keys and values following the completion of the loop.
+For example:
+
+```python
+yt.enable_parallelism()
+my_dictionary = {}
+for sto, dataset in dataset_series.piter(storage=my_dictionary):
+    ...  # process
+    sto.result = ...  # some information processed for this dataset
+    sto.result_id = ...  # some identifier for this dataset
+```
+
+Following the completion of the loop, all tasks in the top-level communicator will have a full `my_dictionary` object, which can be used for plotting or subsequent analysis.
+Common applications of this include iterating over datasets to identify quantities, conduct analysis operations, and so forth.
+Using multiple levels of parallelism allows researchers to allocate a large processor count job on an HPC resource and dedicate individual portions of it to each dataset in a set of data outputs.
+For many types of data analysis, particularly those operations conducted across a range of outputs, this allows much easier strong scaling.
+
 ### Performance of Operations
 
 
