add openmp notes

--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -84,7 +84,7 @@ Scheme of the AMR structure used to estimate the gradient of a quantity in the c
 **NOTE: the blue cell should be used in the example (for instance make it the $f_{01}$ cell, rather than the $f_{20}$ one since the $y$ direction ends up not being used in the actual computation**
 ](images/octree/gradient_computation.svg){#fig:octree-gradient}
 
-### SPH Analysis
+### SPH Analysis {#sec:sph-analysis}
 
 Smoothed Particle Hydrodynamics (SPH) is a commonly-used method for solving equations of hydrodynamics in astrophysics (as well as many other fields!) from a lagrangian perspective.
 This provides many advantages over grid-based discretizations, but also poses somewhat different challenges for analysis and visualization.
@@ -159,6 +159,6 @@ For instance, this means that a "ray" object (often used to compute, for instanc
 Other than these differences, which have been intentionally made to align the results with the expected results from the underlying discretization method, the APIs for access to particle data and finite volume data are identical, and they provide broadly identical functionality, where the disparities are typically in functionality such as volume rendering.
 This allows a single analysis script, or package (such as Trident), to utilize a high-level API to address both gridded and Lagrangian data while still ensuring that the results are high-fidelity and representative of the underlying methods.
 
-### Unstructured Mesh Analysis
+### Unstructured Mesh Analysis {#sec:unstructured-mesh-analysis}
 
 ### Non-Cartesian Coordinates {#sec:noncartesian}
