--- a/content/35.viz_and_volrendering.md
+++ b/content/35.viz_and_volrendering.md
@@ -32,7 +32,7 @@ Widgyts provides a browser-side Jupyterlab interface to the pixelization routine
 ### Higher-Order Unstructured Mesh Elements
 
 
-### Software Volume Rendering
+### Software Volume Rendering {#sec:software-volume-rendering}
 
 The volume rendering is based on classical concepts for rendering 3D objects, and relies on the notion of a scene, a camera and an object to render.
 The object to render can be any data container of supported AMR datasets (either patch-based and octree-based datasets).
