--- a/content/60.analysis_modules.md
+++ b/content/60.analysis_modules.md
@@ -1,4 +1,4 @@
-## Analysis Modules
+## Analysis Modules {#sec:analysis-modules}
 
 For much of its development history, `yt` took the approach of bundling as many analysis modules as possible in the primary repository.
 This provided the advantage of having all work be centralized, and ensuring that each download or installation of `yt` was a fully-featured system for analyzing a large swath of data, but it brought with it the development overhead of the entire `yt` package for what in many cases were isolated pieces of functionality with separable responsibilities.
