first draft of paper dedication

--- a/content/98.acknowledgments.md
+++ b/content/98.acknowledgments.md
@@ -3,3 +3,9 @@
 The authors of this paper would like to extend their deepest gratitude to the many, many individual and institutions that have contributed, directly or indirectly, to the growth of both `yt` and the `yt` community.
 
 We particularly thank KIPAC and SLAC at Stanford, the University of California at San Diego and Santa Cruz, the High-Performance Astro Computing Center, Columbia University, the University of Illinois, University of Colorado at Boulder, University of Edinburgh, the scientific Python community, NumFOCUS, 
+
+MT dedicates this paper to the memory of Michael S. Warren, who was both friend and mentor to several of us on the development team.
+Mike passed away during the final stages of its completion, but his influence was felt deeply along the way.
+Mike was a truly inspirational person, and provided deep mentorship and guidance to multiple of the authors of this paper -- and stepped in with encouragement, advice and friendship at two specific, critical junctures in the development history of yt.
+Thank you, Mike, and we miss you.
+Tomorrow, we're gonna do Stonehenge.
