Start unstructured mesh section

--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -174,6 +174,17 @@ For instance, this means that a "ray" object (often used to compute, for instanc
 Other than these differences, which have been intentionally made to align the results with the expected results from the underlying discretization method, the APIs for access to particle data and finite volume data are identical, and they provide broadly identical functionality, where the disparities are typically in functionality such as volume rendering.
 This allows a single analysis script, or package (such as Trident), to utilize a high-level API to address both gridded and Lagrangian data while still ensuring that the results are high-fidelity and representative of the underlying methods.
 
-### Unstructured Mesh Analysis
+### Unstructured Mesh Analysis {#sec:unstructured_mesh}
+
+`yt` has support for several different types of unstructured mesh elements.
+Typically, these are supplied as a set of coordinate points (vertices) and connectivity between those vertices.
+`yt` is able to interpret three types of elements: tetrahedral elements (4 faces, 4 vertices), wedge elements (5 faces, 6 vertices) and hexahedral elements (6 faces, 8 vertices).
+These vertices can serve as control points, where values are defined at those locations; in finite element simulations, there can be additional control points for higher-order solutions.
+(For a deeper investigation of the way finite elements are defined and how this corresponds to real-space coordinates, we suggest starting with the [periodic table of the finite elements](https://www-users.cse.umn.edu/~arnold/femtable/index.html) which provides both visual reference and a set of citations for further exploration; further explanation can be found in the [SIAM News Article](https://sinews.siam.org/Details-Page/periodic-table-of-the-finite-elements) describing the table.)
+
+
+From the perspective of data access, `yt` is able to select elements of unstructured meshes that overlap with given data selectors (by utilizing point-based selection on the vertices of the elements) and return subsets of the data based on that subsetting.
+
+
 
 ### Non-Cartesian Coordinates {#sec:noncartesian}
