--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -163,7 +163,7 @@ This allows a single analysis script, or package (such as Trident), to utilize a
 
 `yt` has support for several different types of unstructured mesh elements.
 Typically, these are supplied as a set of coordinate points (vertices) and connectivity between those vertices.
-`yt` is able to interpret three types of elements: tetrahedral elements (4 faces, 4 vertices), wedge elements (5 faces, 6 vertices) and hexahedral elements (6 faces, 8 vertices).
+`yt` is able to interpret three types of elements (and their 2D counterparts): tetrahedral elements (4 faces, 4 vertices), wedge elements (5 faces, 6 vertices) and hexahedral elements (6 faces, 8 vertices).
 These vertices can serve as control points, where values are defined at those locations; in finite element simulations, there can be additional control points for higher-order solutions.
 (For a deeper investigation of the way finite elements are defined and how this corresponds to real-space coordinates, we suggest starting with the [periodic table of the finite elements](https://www-users.cse.umn.edu/~arnold/femtable/index.html) which provides both visual reference and a set of citations for further exploration; further explanation can be found in the [SIAM News Article](https://sinews.siam.org/Details-Page/periodic-table-of-the-finite-elements) describing the table.)
 
