--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -182,9 +182,19 @@ Typically, these are supplied as a set of coordinate points (vertices) and conne
 These vertices can serve as control points, where values are defined at those locations; in finite element simulations, there can be additional control points for higher-order solutions.
 (For a deeper investigation of the way finite elements are defined and how this corresponds to real-space coordinates, we suggest starting with the [periodic table of the finite elements](https://www-users.cse.umn.edu/~arnold/femtable/index.html) which provides both visual reference and a set of citations for further exploration; further explanation can be found in the [SIAM News Article](https://sinews.siam.org/Details-Page/periodic-table-of-the-finite-elements) describing the table.)
 
+Similar to how `yt` manages data access for particle and finite volume datasets, for unstructured mesh datasets `yt` identifies each element *collection* as a chunk.
+This means that for situations where you have multiple meshes, composed of individual elements, each will represent its own chunk as well as its own mesh object.
+For example, in MOOSE-based simulations with multiple connectivity arrays, each will be a different "field type" -- typically named `connect1`, `connect2`, etc.
+These are then joined (similar to how {@sec:particle_unions} are defined) into collections that include all of the elements of different types.
 
-From the perspective of data access, `yt` is able to select elements of unstructured meshes that overlap with given data selectors (by utilizing point-based selection on the vertices of the elements) and return subsets of the data based on that subsetting.
+A few items are of particular note in the implementation of finite element mesh analysis in `yt`.
+The first is that `yt` supports direct, native higher-order finite element visualization.
+Visualization of unstructured meshes, and finite element frameworks, utilizes its own set of custom pixelization routines that are dependent not only on the element type but the order of the calculation.
+
+The second item that is of relevance is that `yt` is able to apply "displacement" vectors to the elements, which can be time-varying.
 
 
+One of the most important optimizations that has yet to be applied to the unstructured mesh support in `yt` is in the "coarse" indexing process of selection.
+While fine-grained indexing and selection is applied, the process of checking which meshes (i.e., coarse chunks) may intersect a given selector currently passes everything through to the next stage; this is highly-inefficient, and an important target for future optimization.
 
 ### Non-Cartesian Coordinates {#sec:noncartesian}
