update notebook and try to make it work

--- a/scripts/finite_element_examples.ipynb
+++ b/scripts/finite_element_examples.ipynb
@@ -3,13 +3,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f09a80f1-c578-49cf-aef4-4ed9d38e3cf3",
+   "id": "3fa549b2-b679-4075-9599-1fa1d622e0bb",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import yt"
+    "import yt\n",
+    "import pythreejs\n",
+    "import yt.utilities.lib.mesh_triangulation as mt"
    ]
   },
   {
@@ -44,6 +46,99 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6f0f6aa1-2e06-440a-8edb-c7f886efc33d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "ds = yt.load_sample(\"SecondOrderTets\", step=-1, displacements = {'connect1': ([1.0, 1.0, 1.0], [0.0,0.0,0.0])})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76162948-d262-4653-81c7-a82aadd393b5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "ds.index.meshes[0]._index_offset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "105221a0-7ed6-4352-877e-fa5f69be9d0b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "s = yt.SlicePlot(ds, \"y\", (\"all\", \"ux\"))\n",
+    "s.annotate_mesh_lines(color = 'k')\n",
+    "s.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "104068b2-00c0-4d82-8864-9d70ce4ce960",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "cam = pythreejs.PerspectiveCamera(\n",
+    "    position=[25, 35, 100], fov=20, children=[pythreejs.AmbientLight()],\n",
+    ")\n",
+    "children = [cam, pythreejs.AmbientLight(color=\"#dddddd\")]\n",
+    "material = pythreejs.MeshBasicMaterial(\n",
+    "    color=\"#ff0000\", vertexColors=\"VertexColors\", side=\"DoubleSide\"\n",
+    ")\n",
+    "\n",
+    "def mesh_to_geometry(mesh):\n",
+    "    indices = mt.triangulate_indices(mesh.connectivity_indices - mesh._index_offset)\n",
+    "    # We need to convert these to the triangulated mesh, which is done inside mesh_triangulation.pyx\n",
+    "    attributes = dict(\n",
+    "        position=pythreejs.BufferAttribute(mesh.connectivity_coords, normalized=False),\n",
+    "        index=pythreejs.BufferAttribute(\n",
+    "           indices[:,(0,1,2)].ravel(order=\"C\").astype(\"u4\"), normalized=False\n",
+    "        ),\n",
+    "        color = pythreejs.BufferAttribute(\n",
+    "            (mesh.connectivity_coords * 255).astype('u1')\n",
+    "        )\n",
+    "    )\n",
+    "    geometry = pythreejs.BufferGeometry(attributes=attributes)\n",
+    "    geometry.exec_three_obj_method(\"computeFaceNormals\")\n",
+    "    return geometry\n",
+    "\n",
+    "for mesh in ds.index.meshes:\n",
+    "    geometry = mesh_to_geometry(mesh)\n",
+    "    children.append(pythreejs.Mesh(\n",
+    "        geometry=geometry, material=material, position=[0, 0, 0]\n",
+    "    ))\n",
+    "\n",
+    "scene = pythreejs.Scene(children=children)\n",
+    "\n",
+    "rendererCube = pythreejs.Renderer(\n",
+    "    camera=cam,\n",
+    "    background=\"white\",\n",
+    "    background_opacity=1,\n",
+    "    scene=scene,\n",
+    "    controls=[pythreejs.OrbitControls(controlling=cam)],\n",
+    "    width=800,\n",
+    "    height=800,\n",
+    ")\n",
+    "\n",
+    "\n",
+    "rendererCube"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e63b372-379d-44e1-8598-789481c22741",
    "metadata": {},
    "outputs": [],
    "source": []
