continue with text

--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -209,9 +209,18 @@ In @tbl:finite_element_types we enumerate the types of finite elements supported
 
 Table: Finite element types supported in `yt`. {#tbl:finite_element_types}
 
+To conduct pixelization of a slice or to compute values for volume rendering, `yt` first computes bounding boxes for the individual values.
 Once a pixel has been identified as being "within" a particular element (which also takes into account the shape of higher-order elements, rather than assuming a flat set of planes) the pixelizer has to compute the value at that location.
-In order to compute intra-element values at a position $(x, y, z)$ the position within a *reference* element $(x', y', z')$ must first be computed, and then the shape function applied.
+In order to compute intra-element values at a position $(x, y, z)$ the position within a *reference* element $(x', y', z')$ must first be computed, and then the value solved for given the values at the vertices.
+This is conducted within the function `sample_at_real_point`, which is defined for each `ElementMapper`.
 
-#### Code Generation for Finite Element Analysis
+Of particular note is that, as listed in Table @tbl:finite_element_types , `yt` has support for higher-order element types.
+In Figure @fig:finite_element_higher_order, an example of this is displayed.
+On the left of the figure is a slice plot through a 2nd-order tetrahedral mesh.
+On the right, we have zoomed in on the edge of the boundary of the element mesh.
+In both, the mesh elements have been outlined in black.
+As is clearly visible in the second plot, `yt` is applying higher-order methods for computing pixel values; not only through non-linear interpolation of field values, but also in the shape of the elements, which extend outside the *linear* boundaries of the tetrahedral elements.
+
+
 
 ### Non-Cartesian Coordinates {#sec:noncartesian}
