add example plot

--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -214,6 +214,8 @@ Once a pixel has been identified as being "within" a particular element (which a
 In order to compute intra-element values at a position $(x, y, z)$ the position within a *reference* element $(x', y', z')$ must first be computed, and then the value solved for given the values at the vertices.
 This is conducted within the function `sample_at_real_point`, which is defined for each `ElementMapper`.
 
+![Example of a finite element mesh with higher-order tetrahedral elements, including a zoom-in on one of the elements](images/fem_example.png){#fig:finite_element_higher_order}
+
 Of particular note is that, as listed in Table @tbl:finite_element_types , `yt` has support for higher-order element types.
 In Figure @fig:finite_element_higher_order, an example of this is displayed.
 On the left of the figure is a slice plot through a 2nd-order tetrahedral mesh.
