Add apricity colormap

--- a/content/45.user_friendliness.md
+++ b/content/45.user_friendliness.md
@@ -46,6 +46,7 @@ Many of these are developed by yt contributors, typically using the [`viscm`](ht
 | Colormap Name | Colormap                              |
 | ------------- | ------------------------------------- |
 | `algae`       | ![](images/colormaps/algae.png)       |
+| `apricity`    | ![](images/colormaps/apricity.png)    |
 | `arbre`       | ![](images/colormaps/arbre.png)       |
 | `dusk`        | ![](images/colormaps/dusk.png)        |
 | `kelp`        | ![](images/colormaps/kelp.png)        |
