Add THREE prefix to webglrenderer

--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -28,7 +28,7 @@ fetch('./images/grid_scene.json')
     .then((response) => response.json())
     .then((json) => {
         const scene = new THREE.ObjectLoader().parse( json );
-        const renderer = new WebGLRenderer();
+        const renderer = new THREE.WebGLRenderer();
         renderer.setSize(container.clientWidth, container.clientHeight);
         renderer.setPixelRatio(window.devicePixelRatio);
         container.append(renderer.domElement);
