Add inline analysis

--- a/content/55.scaling_parallelism.md
+++ b/content/55.scaling_parallelism.md
@@ -75,3 +75,18 @@ For many types of data analysis, particularly those operations conducted across 
 
 
 ### Inline Analysis
+
+It is possible to instrument a simulation code to call Python routines inline during its execution.
+Enzo has been instrumented in such a fashion; it accepts parameters that govern when and how frequently Python is called.
+Prior to calling to Python, Enzo exposes views onto its data fields as numpy arrays.
+`yt` has a special-purpose frontend that can access these views, as well as additional metadata passed through module-level objects, and then constructs appropriate `yt`-specific data objects around the data provided by the simulation.
+In these cases, `yt` did not pass around datasets between MPI tasks, but rather decomposed under the assumption that data communication was not possible, and also that tasks would be broadly pre-load balanced by the simulation platform.
+Within Enzo, all of the communication between Python and C++ was managed through Enzo's usage of the C API.
+This required some knowledge of how Python conducts garbage collection, and required ensuring that reference counting was managed correctly to avoid memory leaks.
+
+This non-standardized approach to conducting *in situ* visualization led to the creation and development of the library `libyt` which serves as an intermediary layer between simulation codes and `yt` (and Python in general.)
+This library encapsulates all Python API calls, manages references, and provides a systematic method for providing data pointers to Python.
+`libyt` provides a stable C-based API, and is accessible from numerous different languages.
+It also provides a custom-built `yt` frontend for accepting data.
+A more complete description is outside the scope of this paper, and we refer the reader to (**MJT: cite in prep manuscript**).
+
