Attempt to fix up camera motion

--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -23,16 +23,32 @@ We detail these below, specifically describing how they are implemented and how 
 
 <div id="grid_scene" style="width:400px;height:400px;"></div>
 <script>
-const container = document.querySelector('#grid_scene');
-fetch('./images/grid_scene.json')
-    .then((response) => response.json())
-    .then((json) => {
-        const scene = new THREE.ObjectLoader().parse( json );
-        const renderer = new THREE.WebGLRenderer();
-        renderer.setSize(container.clientWidth, container.clientHeight);
-        renderer.setPixelRatio(window.devicePixelRatio);
-        container.append(renderer.domElement);
-        renderer.render(scene, scene.children[0]);
+document.addEventListener("THREELoaded", function(event) {
+    const THREE = event.THREE;
+    //const OrbitControls = event.OrbitControls;
+    const container = document.querySelector('#grid_scene');
+    fetch('./content/images/grid_scene.json')
+        .then((response) => response.json())
+        .then((json) => {
+            const scene = new THREE.ObjectLoader().parse( json );
+            const renderer = new THREE.WebGLRenderer();
+            const camera = scene.children[0];
+            renderer.setSize(container.clientWidth, container.clientHeight);
+            renderer.setPixelRatio(window.devicePixelRatio);
+            const controls = new OrbitControls( camera, renderer.domElement );
+            container.append(renderer.domElement);
+            camera.position.set(2.5, 2.5, 2.5);
+            camera.lookAt(0.5, 0.5, 0.5);
+            controls.target.set(0.5, 0.5, 0.5);
+            controls.update();
+            renderer.render(scene, camera);
+            animate = () => {
+                requestAnimationFrame( animate );
+                controls.update();
+                renderer.render( scene, camera );
+            }
+            animate();
+    });
 });
 </script>
 
