Wrong URL for grid scene

--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -27,7 +27,7 @@ document.addEventListener("THREELoaded", function(event) {
     const THREE = event.THREE;
     //const OrbitControls = event.OrbitControls;
     const container = document.querySelector('#grid_scene');
-    fetch('./content/images/grid_scene.json')
+    fetch('./images/grid_scene.json')
         .then((response) => response.json())
         .then((json) => {
             const scene = new THREE.ObjectLoader().parse( json );
