Trying to get figures to work

--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -21,7 +21,11 @@ We detail these below, specifically describing how they are implemented and how 
 
 ### Grid Analysis
 
-<div id="grid_scene" style="width:400px;height:400px;"></div>
+![
+<div id="grid_scene" style="width:400px;height:400px; border: 1px solid black;"></div>
+]()
+{#fig:grid_organization}
+
 <script>
 document.addEventListener("THREELoaded", function(event) {
     const THREE = event.THREE;
@@ -53,6 +57,7 @@ document.addEventListener("THREELoaded", function(event) {
 </script>
 
 `yt` was originally written to support the Enzo code, which is a patch-based Adaptive Mesh Refinement (AMR) simulation platform.
+In Figure @fig:grid_organization the grid structure of one of the standard `yt` example datasets, `IsolatedGalaxy`, can be seen.
 Analysis of grid-based data is the most frequent application of `yt`.
 While we discuss much of the techniques implemented for datasets consisting of multiple, potentially overlapping grids, `yt` also supports single-grid datasets (such as FITS cubes) and is able to decompose them for parallel analysis.
 
