Try using an empty image below the div

--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -21,10 +21,9 @@ We detail these below, specifically describing how they are implemented and how 
 
 ### Grid Analysis
 
-![
 <div id="grid_scene" style="width:400px;height:400px; border: 1px solid black;"></div>
-]()
-{#fig:grid_organization}
+
+![The grid structure of the simulation `IsolatedGalaxy`](){#fig:grid_organization}
 
 <script>
 document.addEventListener("THREELoaded", function(event) {
