--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -21,15 +21,19 @@ We detail these below, specifically describing how they are implemented and how 
 
 ### Grid Analysis
 
-<div id="grid_scene" style="width:400px;height:400px; border: 1px solid black;"></div>
-
 ![The grid structure of the simulation `IsolatedGalaxy`](){#fig:grid_organization}
 
 <script>
 document.addEventListener("THREELoaded", function(event) {
     const THREE = event.THREE;
     //const OrbitControls = event.OrbitControls;
-    const container = document.querySelector('#grid_scene');
+    document.querySelector("div#fig\\:grid_organization img").remove();
+    const container = document.createElement("div");
+    container.style.border = 'solid 1px black';
+    container.style.width = '400px;'
+    container.style.height = '400px;'
+    container.id = 'grid_scene';
+    document.querySelector("div#fig\\:grid_organization").prepend(container);
     fetch('./images/grid_scene.json')
         .then((response) => response.json())
         .then((json) => {
